[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/StarSystem.gd" type="Script" id=1]
[ext_resource path="res://Images/redStarSystem.png" type="Texture" id=2]
[ext_resource path="res://Images/blueStarSystem.png" type="Texture" id=3]
[ext_resource path="res://Images/yellowStarSystem.png" type="Texture" id=4]
[ext_resource path="res://Images/greenStarSystem.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 37.0929

[node name="StarSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="GreenSprite" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="YellowSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )

[node name="RedSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="BlueSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="SizeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.3352
margin_top = -11.7676
margin_right = 0.66478
margin_bottom = 2.23242
rect_scale = Vector2( 2, 2 )
text = "I"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.300613, 0.280991 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.82811, -0.790546 )
shape = SubResource( 1 )
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
